Fix Project Dependency https://bugs.webkit.org/show_bug.cgi?id=169340

Unreviewed Dependency Fix.

* WebView/WebViewPrivate.h:



Canonical link: https://commits.webkit.org/186342@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@213582 268f45cc-cd09-0410-ab3c-d52691b4dbfc